@@ -164,3 +164,5 @@ v0.9.1 (WIP):
 
     BUGFIX: Canvas: Disable pink debug outline around widget (#150)
 
+    BUGFIX: Editor: Remove node settings when it is explicitly deleted (#153)
+
